[gd_scene load_steps=25 format=3 uid="uid://ctav3ifwojtpj"]

[ext_resource type="Script" path="res://office_scene.gd" id="1_qnyb5"]
[ext_resource type="Script" path="res://OfficeCanvasLayer.gd" id="2_cvmvr"]
[ext_resource type="Script" path="res://OfficeCamera2D.gd" id="2_j74wf"]
[ext_resource type="Texture2D" uid="uid://c7fp01de041xd" path="res://images/full-office-canvas-1600x720.png" id="2_kn5wx"]
[ext_resource type="Texture2D" uid="uid://dhxcxbganwsnt" path="res://images/left-door.jpg" id="3_fwji1"]
[ext_resource type="Script" path="res://LeftDoor.gd" id="4_huqt6"]
[ext_resource type="Texture2D" uid="uid://bx24cshtcc4jd" path="res://images/right-door.jpg" id="5_xxbbi"]
[ext_resource type="Script" path="res://RightDoor.gd" id="6_jwc1y"]
[ext_resource type="Texture2D" uid="uid://bhayiq0p0nbh7" path="res://images/left-door-button-off.jpg" id="7_dbhn4"]
[ext_resource type="AudioStream" uid="uid://ckhoat3nr0iw5" path="res://audio/Metal Grate Stop - QuickSounds.com.mp3" id="7_wygki"]
[ext_resource type="Texture2D" uid="uid://blivyacr0hb4m" path="res://images/left-door-button-on.jpg" id="8_v55br"]
[ext_resource type="Texture2D" uid="uid://cpajxgbsb7wtd" path="res://images/left-light-button-off.jpg" id="9_arava"]
[ext_resource type="Texture2D" uid="uid://bru14pcieb427" path="res://images/left-light-button-on.jpg" id="10_jtrei"]
[ext_resource type="Texture2D" uid="uid://daf2g2okq38hl" path="res://images/right-door-button-off.jpg" id="12_2fqgp"]
[ext_resource type="Texture2D" uid="uid://buuo81eer5a3o" path="res://images/right-door-button-on.jpg" id="13_irrux"]
[ext_resource type="Texture2D" uid="uid://ciuav3gbm6n0i" path="res://images/right-light-button-off.jpg" id="14_ggjit"]
[ext_resource type="Texture2D" uid="uid://jox3iqdffkwc" path="res://images/right-light-button-on.jpg" id="15_rxp7w"]
[ext_resource type="FontFile" uid="uid://dhg8lahcvk50i" path="res://PublicPixel.ttf" id="16_lfodi"]

[sub_resource type="Animation" id="Animation_1ihrx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullOfficeSprite/LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-603.333, -720)]
}

[sub_resource type="Animation" id="Animation_eychv"]
resource_name = "open_door"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullOfficeSprite/LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-603.333, 0), Vector2(-603.333, -720)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtrty"]
_data = {
"RESET": SubResource("Animation_1ihrx"),
"open_door": SubResource("Animation_eychv")
}

[sub_resource type="Animation" id="Animation_4gyey"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576.667, -720)]
}

[sub_resource type="Animation" id="Animation_twj1s"]
resource_name = "open_door"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576.667, 0), Vector2(576.667, -720)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlwcy"]
_data = {
"RESET": SubResource("Animation_4gyey"),
"open_door": SubResource("Animation_twj1s")
}

[node name="OfficeScene" type="Node2D"]
position = Vector2(576, 324)
script = ExtResource("1_qnyb5")

[node name="OfficeCanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_cvmvr")

[node name="PowerLeftLabel" type="Label" parent="OfficeCanvasLayer"]
offset_left = 19.0
offset_top = 548.0
offset_right = 184.0
offset_bottom = 567.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 15
text = "Power left:"
metadata/_edit_use_anchors_ = true

[node name="UsageLabel" type="Label" parent="OfficeCanvasLayer"]
offset_left = 19.0
offset_top = 585.0
offset_right = 184.0
offset_bottom = 604.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 15
text = "Usage:"
metadata/_edit_use_anchors_ = true

[node name="NightLabel" type="Label" parent="OfficeCanvasLayer"]
offset_left = 1013.0
offset_top = 60.0
offset_right = 1121.0
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 15
text = "Night 1"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PowerLabel" type="Label" parent="OfficeCanvasLayer"]
offset_left = 185.0
offset_top = 547.0
offset_right = 265.0
offset_bottom = 570.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 20
metadata/_edit_use_anchors_ = true

[node name="TODLabel" type="Label" parent="OfficeCanvasLayer"]
offset_left = 994.0
offset_top = 25.0
offset_right = 1134.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("16_lfodi")
theme_override_font_sizes/font_size = 28
text = "12 AM"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FullOfficeSprite" type="Sprite2D" parent="."]
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_kn5wx")

[node name="LeftDoor" type="Sprite2D" parent="FullOfficeSprite"]
unique_name_in_owner = true
position = Vector2(-603.333, -720)
texture = ExtResource("3_fwji1")
script = ExtResource("4_huqt6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="FullOfficeSprite/LeftDoor"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_rtrty")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FullOfficeSprite/LeftDoor"]
stream = ExtResource("7_wygki")

[node name="RightDoor" type="Sprite2D" parent="FullOfficeSprite"]
unique_name_in_owner = true
position = Vector2(576.667, -720)
texture = ExtResource("5_xxbbi")
script = ExtResource("6_jwc1y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="FullOfficeSprite/RightDoor"]
libraries = {
"": SubResource("AnimationLibrary_qlwcy")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FullOfficeSprite/RightDoor"]
stream = ExtResource("7_wygki")

[node name="OfficeCamera2D" type="Camera2D" parent="."]
script = ExtResource("2_j74wf")

[node name="OfficeCameraControl" type="Control" parent="OfficeCamera2D"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="LeftDoorButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = -687.0
offset_top = -59.0
offset_right = -647.0
offset_bottom = 25.0
scale = Vector2(0.9, 0.9)
toggle_mode = true
texture_normal = ExtResource("7_dbhn4")
texture_pressed = ExtResource("8_v55br")
metadata/_edit_use_anchors_ = true

[node name="LeftLightButton" type="TextureButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -689.0
offset_top = 47.0
offset_right = -649.0
offset_bottom = 134.0
scale = Vector2(0.915, 0.915)
toggle_mode = true
texture_normal = ExtResource("9_arava")
texture_pressed = ExtResource("10_jtrei")
metadata/_edit_use_anchors_ = true

[node name="RightDoorButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 647.0
offset_top = -47.0
offset_right = 687.0
offset_bottom = 37.0
scale = Vector2(0.915, 0.915)
toggle_mode = true
texture_normal = ExtResource("12_2fqgp")
texture_pressed = ExtResource("13_irrux")
metadata/_edit_use_anchors_ = true

[node name="RightLightButton" type="TextureButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 648.0
offset_top = 58.0
offset_right = 690.0
offset_bottom = 147.0
scale = Vector2(0.915, 0.915)
toggle_mode = true
texture_normal = ExtResource("14_ggjit")
texture_pressed = ExtResource("15_rxp7w")
metadata/_edit_use_anchors_ = true

[connection signal="toggled" from="Control/LeftDoorButton" to="FullOfficeSprite/LeftDoor" method="_on_left_door_button_toggled"]
[connection signal="toggled" from="Control/LeftLightButton" to="FullOfficeSprite/LeftDoor" method="_on_left_light_button_toggled"]
[connection signal="toggled" from="Control/RightDoorButton" to="FullOfficeSprite/RightDoor" method="_on_right_door_button_toggled"]
[connection signal="toggled" from="Control/RightLightButton" to="FullOfficeSprite/RightDoor" method="_on_right_light_button_toggled"]
